# CV_Stuff

./: README.md
Magic Leap/: README.md
Magic Leap/C++ SDK Includes/: ml_power_manager.h  ml_system_notification_manager.h  ml_world_camera.h
Magic Leap/C++ SDK Samples/system_notifications/: README.md
Magic Leap/C++ SDK Samples/system_notifications/app/: build.gradle
Magic Leap/C++ SDK Samples/system_notifications/app/src/main/: AndroidManifest.xml
Magic Leap/C++ SDK Samples/system_notifications/app/src/main/cpp/: CMakeLists.txt  main.cpp
Magic Leap/C++ SDK Samples/system_notifications/app/src/main/res/values/: strings.xml
Magic Leap/C++ SDK Samples/system_notifications/gradle/wrapper/: gradle-wrapper.properties
Magic Leap/C++ SDK Samples/world_camera/: README.md
Magic Leap/C++ SDK Samples/world_camera/app/: build.gradle
Magic Leap/C++ SDK Samples/world_camera/app/src/main/: AndroidManifest.xml
Magic Leap/C++ SDK Samples/world_camera/app/src/main/cpp/: CMakeLists.txt  main.cpp
Magic Leap/C++ SDK Samples/world_camera/app/src/main/res/values/: strings.xml
